full screen fixed

--- a/ScreenTestApp/Info.plist
+++ b/ScreenTestApp/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Audio Visualizer</string>
+	<string>Screen Test</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -20,10 +20,6 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
-	<key>MTLCaptureEnabled</key>
-	<true/>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>This app needs access to your microphone to visualize live audio waveforms.</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
@@ -41,3 +37,4 @@
 	<dict/>
 </dict>
 </plist>
+
