--- a/AudioVisualizerApp/Info.plist
+++ b/AudioVisualizerApp/Info.plist
@@ -24,6 +24,8 @@
 	<true/>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>This app needs access to your microphone to visualize live audio waveforms.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This app needs access to your camera to display a live video feed with audio visualization overlay.</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
