--- a/Info.plist
+++ b/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>This app needs access to your microphone to visualize live audio waveforms.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This app needs access to your camera to display a live video feed with audio visualization overlay.</string>
 	<key>MTLCaptureEnabled</key>
 	<true/>
 </dict>
